--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites" : [
         {
-            "source":"/api","destination":"https://api.openrouteservice.org/"
+            "source":"/api/:path(.*)","destination":"https://api.openrouteservice.org/"
         }
     ]
 }
