this should work vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites" : [
         {
-            "source":"/api/:path*","destination":"https://api.openrouteservice.org/:path*"
+            "source":"/geocode/:path*","destination":"https://api.openrouteservice.org/geocode/:path*"
         }
     ]
 }
